<resources>
    <string name="app_name">MenuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="the_easiest_way_to_order">The easiest way to order</string>
    <string name="no_lines_no_waiting">No lines. No waiting.</string>
    <string name="opened">OPENED</string>
    <string name="closed">closed</string>
    <string name="logout">Logout</string>
</resources>